# rules_nodejs

internal/e2e/fine_grained_deps/npm/: package-lock.json
internal/e2e/rollup/: BUILD.bazel
internal/e2e/rollup_code_splitting/: BUILD.bazel  bundle_auto-min_golden.js_  main1.spec.js  main_auto.js  main_auto.spec.js  outputgroups.spec.js
internal/e2e/rollup_code_splitting/goldens/: bundle_auto.min.js_
internal/e2e/rollup_fine_grained_deps/: BUILD.bazel
internal/rollup/: rollup_bundle.bzl
internal/web_package/test/: BUILD.bazel
internal/web_package/test2/: BUILD.bazel
